[package]
name = "peril"
version = "0.0.3"
authors = ["junkerjorg <junkerjorg(twenty-one)(at)protonmail(dot)ch>"]
edition = "2018"
keywords = ["hazard", "pointer", "hazardpointer", "lock-free", "reclaimation"]
description = "Safe Hazard pointers for Rust."
license = "MIT"
homepage = "https://github.com/junkerjorg/peril"
repository = "https://github.com/junkerjorg/peril"
categories = ["concurrency", "memory-management"]

[dependencies]
os-thread-local = { version = "0.1" }